Modified css and index.html Add new screen

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Rambla:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
@@ -17,11 +18,20 @@
     </div>
 
     <div class="results">
-      <div class="basecolor"></div>
+      <div class="basecolor row"></div>
       <div class="triad row"></div>
       <div class="complementary row"></div>
     </div>
 
+    <div class="template">
+      <div class="scheme">
+        <h2 class="scheme__title"></h2>
+        <div class="scheme__colors">
+          <div class="scheme__color">
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="js/utilities.js" charset="utf-8"></script>
     <script src="js/palette.js" charset="utf-8"></script>
     <script src="js/script.js" charset="utf-8"></script>
