Add function Analogous

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="basecolor row"></div>
       <div class="triad row"></div>
       <div class="complementary row"></div>
+      <div class="analogous row"></div>
     </div>
 
     <div class="template">
