Add input for analogous

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <input type="text" id="brightness" placeholder="Insert Brightness Value">
       <input type="text" id="range" placeholder="Insert range for complementary">
       <input type="text" id="step-degree" placeholder="Insert degree for complementary">
+      <input type="text" id="range-analogous" placeholder="Insert range for analogous">
+      <input type="text" id="step-degree-analogous" placeholder="Insert degree for analogous">
       <button type="button" name="send" id="send">send</button>
     </div>
 
