Add palette.analogous typeScheme: allArch, cold, warm Todo css index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       <input type="text" id="step-degree" placeholder="Insert degree for complementary">
       <input type="text" id="range-analogous" placeholder="Insert range for analogous">
       <input type="text" id="step-degree-analogous" placeholder="Insert degree for analogous">
+      <select id="analogous-type">
+        <option value="allArch">Cold and Warm</option>
+        <option value="cold">Cold</option>
+        <option value="warm">Warm</option>
+      </select>
       <button type="button" name="send" id="send">send</button>
     </div>
 
