Add Split Complementary Add getColorBase Add updateColorBase

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rambla:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
   </head>
   <body>
     <div class="insert-yourcolor row">
@@ -39,6 +40,7 @@
       <div class="basecolor row"></div>
       <div class="triad row"></div>
       <div class="complementary row"></div>
+      <div class="split-complementary row"></div>
       <div class="analogous row"></div>
     </div>
 
