Add chartjs for wheel

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <div class="complementary row"></div>
       <div class="split-complementary row"></div>
       <div class="analogous row"></div>
+      <div class="doughnut">
+        <canvas id="doughnut__canvas"></canvas>
+      </div>
     </div>
 
     <div class="template">
