Add wheel base functions

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
       <div class="split-complementary row"></div>
       <div class="analogous row"></div>
       <div class="doughnut">
-        <canvas id="doughnut__canvas"></canvas>
+        <canvas id="doughnut__canvas-triad"></canvas>
+        <canvas id="doughnut__canvas-complementar"></canvas>
+        <canvas id="doughnut__canvas-split"></canvas>
+        <canvas id="doughnut__canvas-analogous"></canvas>
       </div>
     </div>
 
