Inserted script for basic input animation - WIP

--- a/test.html
+++ b/test.html
@@ -3,11 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
-		<link href="css/style.css" rel="stylesheet">
-		<script src="script/main.js"></script>
+		<link href="css/animatedInput.css" rel="stylesheet">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="js/animatedInput.js"></script>
 		<title></title>
 	</head>
 	<body>
-	
+		<div class="input_wrapper">
+			<input class="huge_input" type="text">
+			<span class="huge_input_placeholder">HUGE VALUE</span>
+			<div class="huge_input_error_arrow"></div>
+			<span class="huge_input_error_description">Sei proprio una birba</span>
+		</div>
 	</body>
 </html>
