--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link href="https://fonts.googleapis.com/css?family=Rambla:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+    <link rel="stylesheet" href="dist/css/style.css">
   </head>
   <body>
     <div class="insert-yourcolor row">
@@ -59,8 +57,8 @@
         </div>
       </div>
     </div>
-    <script src="js/utilities.js" charset="utf-8"></script>
-    <script src="js/palette.js" charset="utf-8"></script>
-    <script src="js/script.js" charset="utf-8"></script>
+    <script src="dist/js/palette.js" charset="utf-8"></script>
+    <script src="dist/js/script.js" charset="utf-8"></script>
+
   </body>
 </html>
