--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
       <div class="complementary row"></div>
       <div class="split-complementary row"></div>
       <div class="analogous row"></div>
+      <div class="square row"></div>
       <div class="doughnut">
         <canvas id="doughnut__canvas-triad"></canvas>
         <canvas id="doughnut__canvas-complementar"></canvas>
         <canvas id="doughnut__canvas-split"></canvas>
         <canvas id="doughnut__canvas-analogous"></canvas>
+        <canvas id="doughnut__canvas-square"></canvas>
       </div>
     </div>
 
