Add randomDominant and all getters

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
           <option value="saturation">Saturation</option>
           <option value="brightness">Brightness</option>
         </select>
+      </p> <p>
+        <label>Random Dominant setup</label>
+        <input type="text" id="range-random" placeholder="Insert number color - even value" size="30">
+        <input type="text" id="perc-random" placeholder="Insert % value for dominant" size="30">
       </p>
       <p>
         <button type="button" name="send" id="send">send</button>
@@ -52,6 +56,7 @@
       <div class="square row"></div>
       <div class="tetradic row"></div>
       <div class="mono row"></div>
+      <div class="random-dominant row"></div>
       <div class="doughnut">
         <canvas id="doughnut__canvas-triad"></canvas>
         <canvas id="doughnut__canvas-complementar"></canvas>
