Add chart.destroy ToDo chart Mono bug

--- a/index.html
+++ b/index.html
@@ -48,23 +48,43 @@
     </div>
 
     <div class="results">
-      <div class="basecolor row"></div>
-      <div class="triad row"></div>
-      <div class="complementary row"></div>
-      <div class="split-complementary row"></div>
-      <div class="analogous row"></div>
-      <div class="square row"></div>
-      <div class="tetradic row"></div>
-      <div class="mono row"></div>
-      <div class="random-dominant row"></div>
+      <div class="squares">
+        <div class="basecolor row"></div>
+        <div class="triad row"></div>
+        <div class="complementary row"></div>
+        <div class="split-complementary row"></div>
+        <div class="analogous row"></div>
+        <div class="square row"></div>
+        <div class="tetradic row"></div>
+        <div class="mono row"></div>
+        <div class="random-dominant row"></div>
+      </div>
       <div class="doughnut">
-        <canvas id="doughnut__canvas-triad"></canvas>
-        <canvas id="doughnut__canvas-complementar"></canvas>
-        <canvas id="doughnut__canvas-split"></canvas>
-        <canvas id="doughnut__canvas-analogous"></canvas>
-        <canvas id="doughnut__canvas-square"></canvas>
-        <canvas id="doughnut__canvas-tetradic"></canvas>
-        <canvas id="doughnut__canvas-mono"></canvas>
+        <div class="row">
+          <canvas id="doughnut__canvas-triad"></canvas>
+        </div>
+        <div class="row">
+          <canvas id="doughnut__canvas-complementar"></canvas>
+        </div>
+        <div class="row">
+          <canvas id="doughnut__canvas-split"></canvas>
+        </div>
+        <div class="row">
+          <canvas id="doughnut__canvas-analogous"></canvas>
+        </div>
+        <div class="row">
+          <canvas id="doughnut__canvas-square"></canvas>
+        </div>
+        <div class="row">
+          <canvas id="doughnut__canvas-tetradic"></canvas>
+        </div>
+        <div class="row">
+          <canvas id="doughnut__canvas-mono"></canvas>
+        </div>
+        <div class="row">
+          <canvas id="doughnut__canvas-random"></canvas>
+        </div>
+
       </div>
     </div>
 
